spade-tests/src/snapshots/spade_tests__hir_lowering__tests__traced_fsm_with_implicit_name_on_tuple_is_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
entity name(clk: clock, x: bool) -> bool {
    #[fsm]
    reg(clk) (x, y) = x;
    x
}


error: #[fsm] without explicit name on non-name pattern
  ┌─ testinput:2:5
  │
2 │     #[fsm]
  │     ^^^^^^
3 │     reg(clk) (x, y) = x;
  │              ------ This is a pattern
  │
  = Consider specifying the name of the s ignal containing the state
  │
2 │     #[fsm(<name>)]
  │     ~~~~~~~~~~~~~~

error: Inferred a recursive type (*, _)
  ┌─ testinput:3:14
  │
3 │     reg(clk) (x, y) = x;
  │              ^^^^^^ Type (*, _) inferred here
  │
  = help: The recursion happens at the type marked "*"
